test/trivial/bradc/initvarsamename2.good
Error: Variable 'x' used before defined (initvarsamename2.chpl:2)
